Prevent pinch-zoom on mobile devices.

--- a/calchd.css
+++ b/calchd.css
@@ -84,7 +84,7 @@ li {
 
 .keypad li {
 	float: left;
-	padding: 5px;
+	padding: 2px;
 	width: 25%;
 }
 
